[gd_scene load_steps=4 format=3 uid="uid://dr4ae7a3cmaqo"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_gtfj6"]
[ext_resource type="AudioStream" uid="uid://yox6h1qc3ec8" path="res://assets/sound/hud/MP3_Button Clicks & Beeps_15.mp3" id="2_fbxb6"]
[ext_resource type="AudioStream" uid="uid://k4crmxfxfc65" path="res://assets/sound/hud/MP3_Button Clicks & Beeps_21.mp3" id="3_q7lha"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 1155.0
offset_bottom = 651.0
script = ExtResource("1_gtfj6")

[node name="CoinLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 349.0
offset_right = 788.0
offset_bottom = 67.0
theme_override_font_sizes/font_size = 50
text = "Coins"
horizontal_alignment = 1
uppercase = true

[node name="UpgradeList" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 86.0
offset_right = 1156.0
offset_bottom = 575.0
theme_override_constants/separation = 60

[node name="Upgrade1" type="HBoxContainer" parent="UpgradeList"]
layout_mode = 2
size_flags_horizontal = 4

[node name="UpgradeName1" type="Label" parent="UpgradeList/Upgrade1"]
layout_mode = 2
text = "Upgrade Name:  
"

[node name="UpgradeDesc1" type="Label" parent="UpgradeList/Upgrade1"]
layout_mode = 2
text = "Decription of the upgrade
"

[node name="PurchaseButton1" type="Button" parent="UpgradeList/Upgrade1"]
layout_mode = 2
text = "Purchase
"

[node name="Upgrade2" type="HBoxContainer" parent="UpgradeList"]
layout_mode = 2
size_flags_horizontal = 4

[node name="UpgradeName2" type="Label" parent="UpgradeList/Upgrade2"]
layout_mode = 2
text = "Upgrade Name:  
"

[node name="UpgradeDesc2" type="Label" parent="UpgradeList/Upgrade2"]
layout_mode = 2
text = "Decription of the upgrade
"

[node name="PurchaseButton2" type="Button" parent="UpgradeList/Upgrade2"]
layout_mode = 2
text = "Purchase
"

[node name="Upgrade3" type="HBoxContainer" parent="UpgradeList"]
layout_mode = 2
size_flags_horizontal = 4

[node name="UpgradeName3" type="Label" parent="UpgradeList/Upgrade3"]
layout_mode = 2
text = "Upgrade Name:  
"

[node name="UpgradeDesc3" type="Label" parent="UpgradeList/Upgrade3"]
layout_mode = 2
text = "Decription of the upgrade
"

[node name="PurchaseButton3" type="Button" parent="UpgradeList/Upgrade3"]
layout_mode = 2
text = "Purchase
"

[node name="Upgrade4" type="HBoxContainer" parent="UpgradeList"]
layout_mode = 2
size_flags_horizontal = 4

[node name="UpgradeName4" type="Label" parent="UpgradeList/Upgrade4"]
layout_mode = 2
text = "Upgrade Name:  
"

[node name="UpgradeDesc4" type="Label" parent="UpgradeList/Upgrade4"]
layout_mode = 2
text = "Decription of the upgrade
"

[node name="PurchaseButton4" type="Button" parent="UpgradeList/Upgrade4"]
layout_mode = 2
text = "Purchase
"

[node name="Upgrade5" type="HBoxContainer" parent="UpgradeList"]
layout_mode = 2
size_flags_horizontal = 4

[node name="UpgradeName5" type="Label" parent="UpgradeList/Upgrade5"]
layout_mode = 2
text = "Upgrade Name:  
"

[node name="UpgradeDesc5" type="Label" parent="UpgradeList/Upgrade5"]
layout_mode = 2
text = "Decription of the upgrade
"

[node name="PurchaseButton5" type="Button" parent="UpgradeList/Upgrade5"]
layout_mode = 2
text = "Purchase
"

[node name="Upgrade6" type="HBoxContainer" parent="UpgradeList"]
layout_mode = 2
size_flags_horizontal = 4

[node name="UpgradeName6" type="Label" parent="UpgradeList/Upgrade6"]
layout_mode = 2
text = "Upgrade Name:  
"

[node name="UpgradeDesc6" type="Label" parent="UpgradeList/Upgrade6"]
layout_mode = 2
text = "Decription of the upgrade
"

[node name="PurchaseButton6" type="Button" parent="UpgradeList/Upgrade6"]
layout_mode = 2
text = "Purchase
"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_top = 603.0
offset_right = 1158.0
offset_bottom = 653.0
theme_override_font_sizes/font_size = 30
text = "Back
"

[node name="Hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fbxb6")
volume_db = -10.0
pitch_scale = 3.05

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q7lha")
volume_db = -10.0
pitch_scale = 2.03

[connection signal="pressed" from="UpgradeList/Upgrade1/PurchaseButton1" to="." method="_on_purchase_button_1_pressed"]
[connection signal="pressed" from="UpgradeList/Upgrade2/PurchaseButton2" to="." method="_on_purchase_button_2_pressed"]
[connection signal="pressed" from="UpgradeList/Upgrade3/PurchaseButton3" to="." method="_on_purchase_button_3_pressed"]
[connection signal="pressed" from="UpgradeList/Upgrade4/PurchaseButton4" to="." method="_on_purchase_button_4_pressed"]
[connection signal="pressed" from="UpgradeList/Upgrade5/PurchaseButton5" to="." method="_on_purchase_button_5_pressed"]
[connection signal="pressed" from="UpgradeList/Upgrade6/PurchaseButton6" to="." method="_on_purchase_button_6_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
